widget plus Error

--- a/MyApplication/app/src/main/AndroidManifest.xml
+++ b/MyApplication/app/src/main/AndroidManifest.xml
@@ -26,12 +26,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+
+
+
         <activity android:name=".Home_Board.HomeMessageActivity"></activity>
         <activity android:name=".Home_Board.HomeTodoActivity" />
         <activity android:name=".Home_Board.HomeMiniGameActivity" />
         <activity android:name=".Home_Board.HomeAccountActivity" />
         <activity android:name=".Home_Board.AddAccount" />
-        <activity android:name=".CalendarKotlin.CalendarActivity" />
         <activity android:name=".CalendarKotlin.ScheduleEditActivity" />
         <activity android:name=".Home_Board.HomeDialogActivity" />
         <activity android:name=".Home_Board.HomeMessageActivity"
@@ -45,16 +47,23 @@
         <activity
             android:name=".Home_Board.HomeAccountActivity"
             tools:ignore="DuplicateActivity" />
-        <activity android:name=".Home_Board.dialogActivity" /> <!-- <receiver -->
-        <!-- android:name=".AppWidgetProvider" -->
-        <!-- android:exported="false"> -->
-        <!-- <intent-filter> -->
-        <!-- <action android:name="android.appwidget.action.APPWIDGET_UPDATE" /> -->
-        <!-- </intent-filter> -->
-        <!-- <meta-data -->
-        <!-- android:name="android.appwidget.provider" -->
-        <!-- android:resource="@xml/appwidget_info" /> -->
-        <!-- </receiver> -->
+        <activity android:name=".Home_Board.dialogActivity" />
+
+
+
+
+        <receiver android:name=".Location.AppWidgetProvider" >
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+            <meta-data android:name="android.appwidget.provider"
+                android:resource="@xml/appwidget_info" />
+        </receiver>
+
+
+
+
+
         <receiver
             android:name=".Location.AlarmReceiver"
             android:exported="false" />
@@ -68,14 +77,17 @@
 
         <activity android:name=".Home_Board.BoardContentActivity" />
         <activity android:name=".Notification.Notification" />
-        <activity android:name=".FamilySet.MainActivity" />
+        <activity android:name=".FamilySet.MainActivity" >
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+            </intent-filter>
+        </activity>
         <activity android:name=".Home_Board.AlbumActivity" />
         <activity android:name=".FamilySet.FamilySettingActivity" />
         <activity android:name=".LoginRegister.SignUpActivity" />
         <activity android:name=".LoginRegister.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -89,6 +101,9 @@
         <activity android:name=".SerachMap.SearchMap" />
         <activity android:name=".FamilySet.StartActivity" />
         <activity android:name=".Home_Board.customActivity" />
+
+
+
         <activity android:name=".FamilySet.DynamicLinkActivity">
             <intent-filter android:autoVerify="true">
                 <action android:name="android.intent.action.VIEW" />
@@ -101,15 +116,10 @@
                     android:path="/DynamicLinkActivity"
                     android:scheme="https" />
             </intent-filter>
-        </activity> <!-- <service -->
-        <!-- android:name=".MyFirebaseMessagingService" -->
-        <!-- android:exported="true" -->
-        <!-- android:enabled="true"> -->
-        <!-- <intent-filter> -->
-        <!-- <action android:name="com.google.firebase.MESSAGING_EVENT" /> -->
-        <!-- </intent-filter> -->
-        <!-- </service> -->
-        <!-- <activity android:name=".Notification.Notification"></activity> -->
+        </activity>
+
+
+
         <service
             android:name=".Notification.FirebaseService"
             android:permission="com.google.android.c2dm.permission.SEND">
